--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,20 +1,20 @@
 .firstSection {
-  @apply bg-general py-10 flex flex-col justify-center items-center border-y-2 border-dark;
+  @apply bg-general py-6 md:py-8 lg:py-10 flex flex-col justify-center items-center border-y-2 border-dark;
 
   .title {
-    @apply text-light text-sm font-bold mb-5;
+    @apply text-light text-xs md:text-sm font-bold mb-4 md:mb-5;
   }
 
   .iconsGroup {
-    @apply text-light flex space-x-5;
+    @apply text-light flex space-x-7 xs:space-x-6 animate-pulse;
   }
 }
 
 .secondSection {
-  @apply bg-dark flex flex-col px-9 py-5;
+  @apply bg-dark flex flex-col px-6 md:px-9 py-5;
 
   .list {
-    @apply flex flex-col self-end items-end space-y-1 mb-24;
+    @apply flex flex-col self-end items-end space-y-1 mb-20 lg:mb-24 text-xxs sm:text-xs;
   }
 
   .bottomContainer {
@@ -22,10 +22,14 @@
   }
 
   .navList {
-    @apply flex space-x-5;
+    @apply flex space-x-7 xs:space-x-6;
   }
 }
 
+.logo {
+  @apply text-xxs xs:text-xs md:text-sm;
+}
+
 .text {
-  @apply text-sm;
+  @apply text-[1.3rem] xs:text-sm #{!important};
 }
