--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,17 +1,13 @@
 .container {
-  @apply bg-general flex items-center justify-between text-white sections-frame;
-}
-
-.logo {
-  @apply text-white text-lg font-steppe font-extrabold;
+  @apply bg-general flex items-center justify-between text-white sections-frame py-4 px-5 xs:px-6 xs:py-6 lg:py-7 md:px-9;
 }
 
 .contactsBox {
-  @apply flex space-x-5 items-center;
+  @apply flex space-x-6 xs:space-x-5 items-center;
 }
 
 .tel {
-  @apply font-steppe text-sm;
+  @apply hidden xs:block font-steppe text-xs md:text-sm;
 }
 
 .linkBox {
