--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply bg-general flex items-center justify-between text-white sections-frame py-4 px-5 xs:px-6 xs:py-6 lg:py-7 md:px-9;
+  @apply bg-general flex items-center justify-between text-white py-4 px-5 xs:px-6 xs:py-6 lg:py-7 md:px-9;
 }
 
 .contactsBox {
