--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,13 @@
 .container {
-  @apply bg-general flex items-center justify-between text-white py-4 px-5 xs:px-6 xs:py-6 lg:py-7 md:px-9;
+  @apply bg-general text-white py-4 px-5 xs:px-6 xs:py-6 lg:py-7 md:px-9 fixed left-0 right-0 top-0 flex z-10 justify-center;
+}
+
+.content {
+  @apply w-full max-w-7xl flex items-center justify-start bg-general;
 }
 
 .contactsBox {
-  @apply flex space-x-6 xs:space-x-5 items-center;
+  @apply flex space-x-6 xs:space-x-5 items-center ml-auto;
 }
 
 .tel {
