--- a/src/components/ProjectList/ProjectList.module.css
+++ b/src/components/ProjectList/ProjectList.module.css
@@ -55,6 +55,21 @@
   transition: all 0.5s ease-in-out;
 }
 
+.textContainer {
+  @apply h-full w-full flex items-center justify-center flex-col flex-1 p-[13%];
+}
+
+.text {
+  @apply text-light font-steppe text-xxlg mt-auto;
+}
+.contactButton {
+  @apply px-10 py-2 mt-auto bg-light rounded-xl max-w-[200px] text-center !important;
+}
+
+.contactButtonText {
+  @apply text-general text-xs;
+}
+
 .imageBox {
   @apply absolute top-0 bottom-0 left-0 right-0 overflow-hidden flex flex-1 duration-700;
 }
